--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,10 @@ services:
     ports:
       - "8088:8088"
     volumes:
-      - ./settings:/settings
-      - ./models_cache:/models_cache
+      - ./settings:/data/aTrain/settings
+      - ./models_cache:/data/aTrain/models
+      - ./transcriptions:/data/aTrain/transcriptions
     restart: unless-stopped
     environment:
-      - NICEGUI_STORAGE_PATH=/settings
-      - XDG_CACHE_HOME=/models_cache
+      - XDG_DOCUMENTS_DIR=/data
+      - PYTHONUNBUFFERED=1
